--- a/styles/main.css
+++ b/styles/main.css
@@ -70,7 +70,22 @@ main {
 	clear: left;
 
 }
+h1{
+	font-size: 150%;
+	padding-top: .5em;
+	padding-bottom:.25em;
+	margin-bottom:0;
+	margin-top:0;
 
+}
+
+article{
+	padding-top: .5em;
+	padding-bottom: .5em;
+	border-bottom: 2px solid #800000;
+	border-top: 2px solid  #800000 ;
+
+}
  main h2 {
 	color: var(--global-color-1);
 	font-size: 130%;
